# threeML

./: .buildinfo  .codeclimate.yml  .flake8  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.html  CHANGELOG.md  Dockerfile  FermiGBM_TTE_Like Demo.ipynb  MANIFEST.in  ModelManager.py  Parameter.py  PointSource.py  README.md  __init__.py  build_local.sh  codecov.yml  dataList.py  fancyDisplay.py  faq.html  genindex.html  index.html  install_3ML.py  install_3ML.py.bak  install_3ML.sh  installation.html  intro.html  jointLikelihood.py  likePrototype.py  minimization.py  modeling.html  objects.inv  paper.bib  paper.md  plugins.html  push_new_version.sh  py-modindex.html  pyproject.toml  (+14 more)
.doctrees/: environment.pickle  faq.doctree  index.doctree  intro.doctree  modeling.doctree  plugins.doctree  release_notes.doctree  xspec_users.doctree
.doctrees/api/: API.doctree  modules.doctree
.doctrees/notebooks/: APEC_doc.doctree  Analysis_results_showcase.doctree  Background_modeling.doctree  Bayesian_tutorial.doctree  Building_Plugins_from_TimeSeries.doctree  Fermipy_LAt.doctree  Point_source_plotting.doctree  Quickstart.doctree  The_3ML_workflow.doctree  Time-energy-fit.doctree  configuration.doctree  custom_plugins.doctree  extended_models.doctree  faq.doctree  flux_examples.doctree  gof_lrt.doctree  grb080916C.doctree  hal_example.doctree  installation.doctree  (+8 more)
.github/: build_and_test.yml
_modules/: index.html  threeML.html
_sources/: CHANGELOG.md.txt  index.rst.txt  plugins.rst.txt  release_notes.rst.txt  team.rst.txt  xspec_users.rst.txt
api/: API.html  modules.html  threeML.analysis_results.html  threeML.bayesian.autoemcee_sampler.html  threeML.bayesian.bayesian_analysis.html  threeML.bayesian.dynesty_sampler.html  threeML.bayesian.emcee_sampler.html  threeML.bayesian.html  threeML.bayesian.multinest_sampler.html  threeML.bayesian.nautilus_sampler.html  threeML.bayesian.sampler_base.html  threeML.bayesian.tutorial_material.html  threeML.bayesian.ultranest_sampler.html  threeML.bayesian.zeus_sampler.html  threeML.catalogs.Fermi.html  threeML.catalogs.FermiGBM.html  threeML.catalogs.FermiLAT.html  threeML.catalogs.FermiLLE.html  threeML.catalogs.Swift.html  threeML.catalogs.VirtualObservatoryCatalog.html  threeML.catalogs.catalog_utils.html  threeML.catalogs.html  threeML.classicMLE.goodness_of_fit.html  threeML.classicMLE.html  threeML.classicMLE.joint_likelihood.html  threeML.classicMLE.joint_likelihood_set.html  threeML.classicMLE.likelihood_ratio_test.html  threeML.config.catalog_structure.html  threeML.config.config.html  threeML.config.config_structure.html  threeML.config.config_utils.html  threeML.config.fitting_structure.html  threeML.config.html  threeML.config.plotting_structure.html  threeML.config.plugin_structure.html  threeML.config.point_source_structure.html  threeML.data_list.html  threeML.exceptions.custom_exceptions.html  threeML.exceptions.html  threeML.html  (+155 more)
ci/: build_and_test.sh  cron_install_and_test.sh  environment.yml  environment_aarch64.yml  environment_fermi.yml  environment_hal.yml  environment_macos-latest.yml  environment_noxspec.yml  environment_xspec.yml  mamba.yml  push_new_version.sh  run_tests.sh  set_minor_version.py
conda-dist/: build_inside_container.sh  make_packages.sh  make_wheels.py  recipe.yaml  variants.yaml
docs/: API.rst  Makefile  Time_series.rst  conf.py  environment.yml  faq.rst  features.rst  index.rst  installation.md  installation.rst  intro.rst  modeling.rst  plotting.rst  plugins.rst  release_notes.rst  requirements.txt  team.rst  tutorials.rst  xspec_users.rst
examples/: 090217206.html  090217206.ipynb  Analysis_results_showcase.ipynb  Background_modeling.ipynb  FermiGBMTTELike Demo.ipynb  FermiGBMTTELike_Demo.ipynb  FermiGBMTTELike_Demo.ipynb.html  FermiGBM_TTE_Like Demo.ipynb  FermiLATLike_example.ipynb  Fermi_GBM_LLE_Demo.ipynb  Fermipy_LAT.ipynb  Flux_Calculations.ipynb  GROND Photometry demo.ipynb  Joint fitting XRT and GBM data with XSPEC models.ipynb  MULTINEST parallel demo.ipynb  Minimization_tutorial.ipynb  Photometry_demo.ipynb  Plotting_showcase.ipynb  XSpec_models_test.ipynb  __jointLikexml.xml  basic_test.ipynb  bayesian_tutorial.ipynb  bn090217206_b1_bkgspectra.bak  bn090217206_b1_srcspectra.pha  bn090217206_n6_bkgspectra.bak  bn090217206_n6_srcspectra.pha  bn090217206_n9_srcspectra.pha  fermi_grb_full_demo.ipynb  fermi_trans_builder_demo.ipynb  gbm_lle_catalog_demo.ipynb  grb_multi_analysis.ipynb  joint_BAT_gbm_demo.ipynb  test.txt  time_dependent_demo.ipynb
logo/: logo.xcf
models/: FakePlugin.h  LikelihoodModel.py  ModelInterface.cxx  ModelInterface.h  ModelInterface_boost.cxx  ModelManager.py
notebooks/: APEC_doc.html  APEC_doc.ipynb  Analysis_results_showcase.html  Analysis_results_showcase.ipynb  Background_modeling.html  Background_modeling.ipynb  Bayesian_tutorial.html  Bayesian_tutorial.ipynb  Building_Plugins_from_TimeSeries.html  Building_Plugins_from_TimeSeries.ipynb  Fermipy_LAt.html  Fermipy_LAt.ipynb  LAT_Transient_Builder_Example.html  LAT_Transient_Builder_Example.ipynb  Minimization_tutorial.html  Minimization_tutorial.ipynb  Photometry_demo.html  Photometry_demo.ipynb  Point_source_plotting.html  Point_source_plotting.ipynb  Quickstart.html  Quickstart.ipynb  The_3ML_workflow.html  The_3ML_workflow.ipynb  Time-energy-fit.html  Time-energy-fit.ipynb  configuration.html  configuration.ipynb  custom_plugins.html  custom_plugins.ipynb  extended_models.html  extended_models.ipynb  faq.html  faq.ipynb  flux_examples.html  flux_examples.ipynb  gof_lrt.html  gof_lrt.ipynb  grb080916C.html  grb080916C.ipynb  (+24 more)
paper/: paper.bib  paper.md
plugins/: FermiLATLike.py
scripts/: build_filter_lib.py  generate_changelog.py
test/: generate_pha.py  test.pha  test_bak.pha  test_gbm.py  test_generic.py  test_ogip.py
threeML/: .coveralls.yml  __init__.py  _lazy_exports.py  _version.py  analysis_results.py  analysis_results.py.bak  dataList.py  data_list.py  data_list.py.bak  jointLikelihood.py  pluginPrototype.py  plugin_prototype.py  random_variates.py  version.py
(+4097 files in other folders)
