[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "threeML"
dynamic = ["version"]
description = "The Multi-Mission Maximum Likelihood framework"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.9.0"
authors = [
    {name = "Giacomo Vianello", email = "io@tu.com"}
]
maintainers = [
	    {name = "Niccolò Di Lalla", email = "niccolo.dilalla@stanford.edu"},
        {name = "Nicola Omodei", email = "nicola.omodei@stanford.edu"}
]
keywords = [
    "Likelihood",
    "Multi-mission", 
    "3ML",
    "HAWC",
    "Fermi",
    "HESS",
    "joint fit",
    "bayesian",
    "multi-wavelength"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy>=2.1",
    "scipy>=1.13",
    "astropy",
    "matplotlib",
    "uncertainties",
    "pyyaml>=5.1",
    "dill",
    "iminuit>=2.0",
    "astromodels",
    "astroquery",
    "corner",
    "pandas",
    "requests",
    "speclite>=1.0",
    "ipython",
    "ipyparallel",
    "joblib",
    "numexpr",
    "numba",
    "numdifftools",
    "tqdm>=4.67.2",
    "omegaconf",
    "rich",
    "packaging",
    "emcee>3",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-codecov",
]
docs = [
    "sphinx>=1.4",
    "sphinx_rtd_theme",
    "nbsphinx",
    "sphinx-autoapi",
]
samplers = [
    "emcee>=3",
    "pymultinest",
    "dynesty",
    "zeus-mcmc",
    "chainconsumer",
    "ultranest",
]

[project.urls]
Homepage = "https://github.com/threeml/threeML"
Documentation = "https://threeml.readthedocs.io"
Repository = "https://github.com/threeML/threeML"
"Bug Tracker" = "https://github.com/threeML/threeML/issues"
"Source Code" = "https://github.com/threeML/threeML"

[tool.setuptools]
include-package-data = true
[tool.setuptools.packages.find]
include = ["threeML","threeML.*"]

[tool.setuptools.package-data]
threeML = ["threeML/data/*/**"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "threeML/_version.py"
versionfile_build = "threeML/_version.py"
tag_prefix = "v"
parentdir_prefix = "threeML-"

[tool.pytest.ini_options]
markers = [
    "slow: slow tests",
]

[tool.isort]
profile = "black"
