[aliases]
test=pytest

[metadata]
name = threeML
description = The Multi-Mission Maximum Likelihood framework
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/threeml/threeML

author_email = giacomo.vianello@gmail.com
author = Giacomo Vianello
requires_python = >=3.7.0


project_urls =
    Documentation = https://threeml.readthedocs.io
    Bug Tracker = https://github.com/threeML/threeML/issues
    Source Code = https://github.com/threeML/threeML

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Environment :: Console

[options]
include_package_data = True

install_requires =
    numpy>=1.16
    scipy>=0.18		
    emcee>=3
    astropy>=1.3.3
    matplotlib
    uncertainties
    pyyaml>=5.1
    dill
    iminuit>=1.2,<2.0
    astromodels
    astroquery
    corner
    pandas
    requests
    speclite>=0.11
    ipython
    ipyparallel
    numexpr
    dynesty
    numba
    numdifftools
    tqdm
    colorama
    omegaconf
    
tests_require =
    pytest
    pytest-codecov


[options.extras_require]
tests =
      pytest
docs = 
      sphinx>= 1.4
      sphinx_rtd_theme
      nbsphinx
      sphinx-autoapi

# [options.packages.find]
# where = src
# exclude =
#     tests


[versioneer]
VCS=git
style=pep440
versionfile_source=threeML/_version.py
versionfile_build=threeML/_version.py
tag_prefix=v
parentdir_prefix=threeML-
