[aliases]
test=pytest

[metadata]
name = threeML
description = The Multi-Mission Maximum Likelihood framework
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/threeml/threeML

author_email = giacomo.vianello@gmail.com
author = Giacomo Vianello
requires_python = >=3.7.0


project_urls =
    Documentation = https://threeml.readthedocs.io
    Bug Tracker = https://github.com/threeML/threeML/issues
    Source Code = https://github.com/threeML/threeML

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Operating System :: POSIX
    Programming Language :: Python :: 3.7
    Environment :: Console

[options]
include_package_data = True

install_requires =
    numpy>=1.16
    scipy>=1.4	
    emcee>=3
    astropy>=1.3.3
    matplotlib
    uncertainties
    pyyaml>=5.1
    dill
    iminuit>=2.0
    astromodels
    astroquery
    corner
    pandas
    requests
    speclite>=0.11
    ipython
    ipyparallel
    numexpr
    dynesty
    numba
    numdifftools
    tqdm>=4.56.0
    colorama
    omegaconf
    ipywidgets
    rich

tests_require =
    pytest
    pytest-codecov


[options.extras_require]
tests =
      pytest
docs = 
      sphinx>= 1.4
      sphinx_rtd_theme
      nbsphinx
      sphinx-autoapi

# [options.packages.find]
# where = src
# exclude =
#     tests


[versioneer]
VCS=git
style=pep440
versionfile_source=threeML/_version.py
versionfile_build=threeML/_version.py
tag_prefix=v
parentdir_prefix=threeML-

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 80


[flake8]
ignore = E127,E201,E202,E203,E231,E252,E266,E402,E999,F841,W503,W605,F403,F401,E741, E731
select = C,E,F,W,B,B950
extend-ignore = E203, E501
#extend-ignore = F401 # ignore unused
max-line-length = 88
exclude = .git,docs,scripts,examples,setup.py,ci,build,dist,versioneer.py,conftest.py,threeML/test,*/*.ipynb_checkpoints, threeML/__init__.py

per-file-ignores =
     */*__init__.py:F401
     threeML/plugins/*.py:F405
     threeML/analysis_results.py:E731
     threeML/plugins/FermipyLike.py:F821
     threeML/catalogs/catalog_utils.py:F821

